Finished the Spring Code. Movie and Artist can be uploaded and fetched. Its probably more useful to use the @put instead of œpost, but I leave both in it. Also cleaned the code.